--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/Css.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>ClasesConHDHugo</title>
 </head>
 
@@ -66,14 +67,10 @@
     
   </div>
 </section>
+<footer class="footer">
+  <p>© 2026 ClasesParticulares | Todos los derechos reservados</p>
 
-
-
-
-
-
-
+</footer>
 
 </body>
-
 </html>
