--- a/Index.html
+++ b/Index.html
@@ -46,31 +46,46 @@
     </section>
 
     <section class="como-funciona">
-  <h2>¿Cómo funciona?</h2>
+        <h2>¿Cómo funciona?</h2>
 
-  <div class="cards">
+        <div class="cards">
 
-    <article class="card">
-      <h3>1. Elige tu asignatura</h3>
-      <p>Selecciona la materia en la que necesitas ayuda y el nivel que estás cursando.</p>
-    </article>
+            <article class="card">
+                <h3>1. Elige tu asignatura</h3>
+                <p>Selecciona la materia en la que necesitas ayuda y el nivel que estás cursando.</p>
+            </article>
 
-    <article class="card">
-      <h3>2. Contacta con el profesor</h3>
-      <p>Habla directamente con un profesor especializado y acuerda horarios.</p>
-    </article>
+            <article class="card">
+                <h3>2. Contacta con el profesor</h3>
+                <p>Habla directamente con un profesor especializado y acuerda horarios.</p>
+            </article>
 
-    <article class="card">
-      <h3>3. Empieza a aprender</h3>
-      <p>Disfruta de clases personalizadas y mejora tus resultados académicos.</p>
-    </article>
-    
-  </div>
-</section>
-<footer class="footer">
-  <p>© 2026 ClasesParticulares | Todos los derechos reservados</p>
+            <article class="card">
+                <h3>3. Empieza a aprender</h3>
+                <p>Disfruta de clases personalizadas y mejora tus resultados académicos.</p>
+            </article>
 
-</footer>
+        </div>
+    </section>
+    <section>
 
+    </section>
+    <footer class="footer">
+        <p>© 2026 ClasesConHDHugo | Todos los derechos reservados</p>
+        <div>
+            <a href="https://facebook.com" target="_blank">
+                <i class="fa-brands fa-facebook"></i>
+            </a>
+
+            <a href="https://instagram.com" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+
+            <a href="https://twitter.com" target="_blank">
+                <i class="fa-brands fa-twitter"></i>
+            </a>
+        </div>
+    </footer>
 </body>
+
 </html>
