--- a/Index.html
+++ b/Index.html
@@ -67,9 +67,38 @@
 
         </div>
     </section>
-    <section>
+<section class="galeria-profesores" id="profesores">
+  <h2>Nuestros Profesores</h2>
 
-    </section>
+  <div class="galeria">
+
+    <figure class="profesor">
+      <img src="Img/joven-hombre-barbudo-camisa-rayas_273609-5677.avif" alt="Profesor de Matemáticas">
+      <figcaption>
+        <h3>Ricardo López</h3>
+        <p>Licenciada en Matemáticas. Más de 10 años de experiencia.</p>
+      </figcaption>
+    </figure>
+
+    <figure class="profesor">
+      <img src="Img/images.jpg" alt="Profesor de Inglés">
+      <figcaption>
+        <h3>Carlos Martín</h3>
+        <p>Graduado en Filología Inglesa. Certificación C2.</p>
+      </figcaption>
+    </figure>
+
+    <figure class="profesor">
+      <img src="Img/1600w-7MtFJrVplss.webp" alt="Profesor de Informática">
+      <figcaption>
+        <h3>Lorenzo Gómez</h3>
+        <p>Ingeniera Informática. Especialista en programación web.</p>
+      </figcaption>
+    </figure>
+
+  </div>
+</section>
+
     <footer class="footer">
         <p>© 2026 ClasesConHDHugo | Todos los derechos reservados</p>
         <div>
