--- a/Index.html
+++ b/Index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/Css.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>ClasesConHDHugo</title>
 </head>
@@ -46,58 +47,66 @@
     </section>
 
     <section class="como-funciona">
+        <span class="etiqueta">Nuestro método</span>
         <h2>¿Cómo funciona?</h2>
+        <p class="intro">
+            Aprender nunca fue tan fácil. Te acompañamos paso a paso para que
+            consigas tus objetivos académicos.
+        </p>
 
         <div class="cards">
 
             <article class="card">
-                <h3>1. Elige tu asignatura</h3>
-                <p>Selecciona la materia en la que necesitas ayuda y el nivel que estás cursando.</p>
-            </article>
-
-            <article class="card">
-                <h3>2. Contacta con el profesor</h3>
+                <i class="fa-solid fa-comments"></i>
+                <h3>1.Contacta con el profesor </h3>
                 <p>Habla directamente con un profesor especializado y acuerda horarios.</p>
             </article>
 
             <article class="card">
+                <i class="fa-solid fa-book-open"></i>
+                <h3>2.Elige tu asignatura</h3>
+                <p>Selecciona la materia en la que necesitas ayuda y el nivel que estás cursando.</p>
+            </article>
+
+            <article class="card">
+                <i class="fa-solid fa-graduation-cap"></i>
                 <h3>3. Empieza a aprender</h3>
                 <p>Disfruta de clases personalizadas y mejora tus resultados académicos.</p>
             </article>
 
         </div>
     </section>
-<section class="galeria-profesores" id="profesores">
-  <h2>Nuestros Profesores</h2>
+    <section class="galeria-profesores" id="profesores">
+        <h2>Nuestros Profesores</h2>
 
-  <div class="galeria">
+        <div class="galeria">
 
-    <figure class="profesor">
-      <img src="Img/joven-hombre-barbudo-camisa-rayas_273609-5677.avif" alt="Profesor de Matemáticas">
-      <figcaption>
-        <h3>Ricardo López</h3>
-        <p>Licenciada en Matemáticas. Más de 10 años de experiencia.</p>
-      </figcaption>
-    </figure>
+            <figure class="profesor">
+                <img src="Img/joven-hombre-barbudo-camisa-rayas_273609-5677.avif" alt="Profesor de Matemáticas">
+                <figcaption>
+                    <h3>Ricardo López</h3>
+                    <p>Licenciado en Matemáticas. Más de 10 años de experiencia.</p>
+                </figcaption>
+            </figure>
 
-    <figure class="profesor">
-      <img src="Img/images.jpg" alt="Profesor de Inglés">
-      <figcaption>
-        <h3>Carlos Martín</h3>
-        <p>Graduado en Filología Inglesa. Certificación C2.</p>
-      </figcaption>
-    </figure>
+            <figure class="profesor">
+                <img src="Img/images.jpg" alt="Profesor de Inglés">
+                <figcaption>
+                    <h3>Carlos Martín</h3>
+                    <p>Graduado en Filología Inglesa. Certificación C2.</p>
+                </figcaption>
+            </figure>
 
-    <figure class="profesor">
-      <img src="Img/1600w-7MtFJrVplss.webp" alt="Profesor de Informática">
-      <figcaption>
-        <h3>Lorenzo Gómez</h3>
-        <p>Ingeniera Informática. Especialista en programación web.</p>
-      </figcaption>
-    </figure>
+            <figure class="profesor">
+                <img src="Img/1600w-7MtFJrVplss.webp" alt="Profesor de Informática">
+                <figcaption>
+                    <h3>Lorenzo Gómez</h3>
+                    <p>Ingeniero Informático. Especialista en programación web.</p>
+                </figcaption>
+            </figure>
 
-  </div>
-</section>
+        </div>
+    </section>
 
     <footer class="footer">
         <p>© 2026 ClasesConHDHugo | Todos los derechos reservados</p>
