--- a/Index.html
+++ b/Index.html
@@ -107,22 +107,58 @@
 
         </div>
     </section>
-    <section class="carrusel-seccion">
-        <h2>Nuestro trabajo en acción</h2>
+    <section class="servicios">
 
-        <div class="carrusel">
-            <div class="carrusel-track">
-                <img src="Img/Carrusel/pexels-divinetechygirl-1181534.jpg" alt="Carrusel1">
-                <img src="Img/Carrusel/pexels-katerina-holmes-5905445.jpg" alt="Carrusel2">
-                <img src="Img/Carrusel/pexels-max-fischer-5211478.jpg" alt="Carrusel3">
-                <img src="Img/Carrusel/pexels-max-fischer-5212320.jpg" alt="Carrusel4">
-                <img src="Img/Carrusel/pexels-max-fischer-5212335.jpg" alt="Carrusel5">
-                <img src="Img/Carrusel/pexels-max-fischer-5212336.jpg" alt="Carrusel6">
-                <img src="Img/Carrusel/pexels-max-fischer-5212345.jpg" alt="Carrusel7">
-                <img src="Img/Carrusel/pexels-olia-danilevich-5088013.jpg" alt="Carrusel8">
+        <div class="servicios-contenido">
+
+            <div class="carrusel">
+                <div class="carrusel-track">
+                    <img src="Img/Carrusel/pexels-divinetechygirl-1181534.jpg" alt="Carrusel1">
+                    <img src="Img/Carrusel/pexels-katerina-holmes-5905445.jpg" alt="Carrusel2">
+                    <img src="Img/Carrusel/pexels-max-fischer-5211478.jpg" alt="Carrusel3">
+                    <img src="Img/Carrusel/pexels-max-fischer-5212320.jpg" alt="Carrusel4">
+                    <img src="Img/Carrusel/pexels-max-fischer-5212335.jpg" alt="Carrusel5">
+                    <img src="Img/Carrusel/pexels-max-fischer-5212336.jpg" alt="Carrusel6">
+                    <img src="Img/Carrusel/pexels-max-fischer-5212345.jpg" alt="Carrusel7">
+                    <img src="Img/Carrusel/pexels-olia-danilevich-5088013.jpg" alt="Carrusel8">
+                </div>
             </div>
         </div>
     </section>
+    <section class="servicios" id="servicios">
+        <h2>Nuestros Servicios</h2>
+
+        <table class="tabla-servicios">
+            <thead>
+                <tr>
+                    <th>Asignatura</th>
+                    <th>Nivel</th>
+                    <th>Modalidad</th>
+                </tr>
+            </thead>
+
+            <tbody>
+                <tr>
+                    <td>Matemáticas</td>
+                    <td>Primaria / ESO / Bachillerato</td>
+                    <td>Online y Presencial</td>
+                </tr>
+
+                <tr>
+                    <td>Inglés</td>
+                    <td>Todos los niveles</td>
+                    <td>Online y Presencial</td>
+                </tr>
+
+                <tr>
+                    <td>Lengua</td>
+                    <td>Primaria y ESO</td>
+                    <td>Presencial</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+
 
     <footer class="footer">
         <p>© 2026 ClasesConHDHugo | Todos los derechos reservados</p>
