--- a/Index.html
+++ b/Index.html
@@ -107,33 +107,6 @@
 
         </div>
     </section>
-    <section class="servicios">
-
-        <div class="servicios-contenido">
-
-            <div class="carrusel">
-                <div class="carrusel-track">
-                    <img src="Img/Carrusel/pexels-divinetechygirl-1181534.jpg" alt="Carrusel1">
-                    <img src="Img/Carrusel/pexels-katerina-holmes-5905445.jpg" alt="Carrusel2">
-                    <img src="Img/Carrusel/pexels-max-fischer-5211478.jpg" alt="Carrusel3">
-                    <img src="Img/Carrusel/pexels-max-fischer-5212320.jpg" alt="Carrusel4">
-                    <img src="Img/Carrusel/pexels-max-fischer-5212335.jpg" alt="Carrusel5">
-                    <img src="Img/Carrusel/pexels-max-fischer-5212336.jpg" alt="Carrusel6">
-                    <img src="Img/Carrusel/pexels-max-fischer-5212345.jpg" alt="Carrusel7">
-                    <img src="Img/Carrusel/pexels-olia-danilevich-5088013.jpg" alt="Carrusel8">
-                    <!--Duplicadas -->
-                     <img src="Img/Carrusel/pexels-divinetechygirl-1181534.jpg" alt="Carrusel1">
-                    <img src="Img/Carrusel/pexels-katerina-holmes-5905445.jpg" alt="Carrusel2">
-                    <img src="Img/Carrusel/pexels-max-fischer-5211478.jpg" alt="Carrusel3">
-                    <img src="Img/Carrusel/pexels-max-fischer-5212320.jpg" alt="Carrusel4">
-                    <img src="Img/Carrusel/pexels-max-fischer-5212335.jpg" alt="Carrusel5">
-                    <img src="Img/Carrusel/pexels-max-fischer-5212336.jpg" alt="Carrusel6">
-                    <img src="Img/Carrusel/pexels-max-fischer-5212345.jpg" alt="Carrusel7">
-                    <img src="Img/Carrusel/pexels-olia-danilevich-5088013.jpg" alt="Carrusel8">
-                </div>
-            </div>
-        </div>
-    </section>
     <section class="servicios" id="servicios">
         <h2>Nuestros Servicios</h2>
 
@@ -148,29 +121,57 @@
 
             <tbody>
                 <tr>
-                    <td>Matemáticas</td>
+                    <td><i class="fa-solid fa-calculator"></i>Matemáticas</td>
                     <td>Primaria / ESO / Bachillerato</td>
                     <td>Online y Presencial</td>
                 </tr>
 
                 <tr>
-                    <td>Inglés</td>
+                    <td><i class="fa-solid fa-globe"></i>Inglés</td>
                     <td>Todos los niveles</td>
                     <td>Online y Presencial</td>
                 </tr>
 
                 <tr>
-                    <td>Lengua</td>
+                    <td><i class="fa-solid fa-pen"></i>Lengua</td>
                     <td>Primaria y ESO</td>
                     <td>Presencial</td>
                 </tr>
             </tbody>
         </table>
+
+
+        <div class="servicios-contenido">
+
+            <div class="carrusel">
+                <div class="carrusel-track">
+                    <img src="Img/Carrusel/pexels-divinetechygirl-1181534.jpg" alt="Carrusel1">
+                    <img src="Img/Carrusel/pexels-katerina-holmes-5905445.jpg" alt="Carrusel2">
+                    <img src="Img/Carrusel/pexels-max-fischer-5211478.jpg" alt="Carrusel3">
+                    <img src="Img/Carrusel/pexels-max-fischer-5212320.jpg" alt="Carrusel4">
+                    <img src="Img/Carrusel/pexels-max-fischer-5212335.jpg" alt="Carrusel5">
+                    <img src="Img/Carrusel/pexels-max-fischer-5212336.jpg" alt="Carrusel6">
+                    <img src="Img/Carrusel/pexels-max-fischer-5212345.jpg" alt="Carrusel7">
+                    <img src="Img/Carrusel/pexels-olia-danilevich-5088013.jpg" alt="Carrusel8">
+                    <!--Duplicadas -->
+                    <img src="Img/Carrusel/pexels-divinetechygirl-1181534.jpg" alt="Carrusel1">
+                    <img src="Img/Carrusel/pexels-katerina-holmes-5905445.jpg" alt="Carrusel2">
+                    <img src="Img/Carrusel/pexels-max-fischer-5211478.jpg" alt="Carrusel3">
+                    <img src="Img/Carrusel/pexels-max-fischer-5212320.jpg" alt="Carrusel4">
+                    <img src="Img/Carrusel/pexels-max-fischer-5212335.jpg" alt="Carrusel5">
+                    <img src="Img/Carrusel/pexels-max-fischer-5212336.jpg" alt="Carrusel6">
+                    <img src="Img/Carrusel/pexels-max-fischer-5212345.jpg" alt="Carrusel7">
+                    <img src="Img/Carrusel/pexels-olia-danilevich-5088013.jpg" alt="Carrusel8">
+                </div>
+            </div>
+        </div>
     </section>
+
     <section class="contacto" id="contacto">
-        <h2>Contacto</h2>
+       
 
         <form class="formulario-contacto">
+             <h2>Contacto</h2>
 
             <label for="nombre">Nombre</label>
             <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required>
@@ -191,13 +192,18 @@
                 <option value="">Selecciona una modalidad</option>
                 <option value="online">Online</option>
                 <option value="presencial">Presencial</option>
+
             </select>
 
             <button type="submit">Enviar</button>
 
         </form>
+        <div class="Rss">
+                    <!-- start feedwind code -->
+                    <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" preloader-text="Loading"
+                        data-fw-param="177091/"></script>
+                </div>
     </section>
-
 
 
     <footer class="footer">
