Añadir lista y retocar footer

--- a/Index.html
+++ b/Index.html
@@ -53,6 +53,12 @@
             Aprender nunca fue tan fácil. Te acompañamos paso a paso para que
             consigas tus objetivos académicos.
         </p>
+        <ul class="ventajas">
+            <li>Profesores titulados y con experiencia</li>
+            <li>Clases personalizadas</li>
+            <li>Modalidad online y presencial</li>
+            <li>Flexibilidad de horarios</li>
+        </ul>
 
         <div class="cards">
 
@@ -101,7 +107,7 @@
                 <img src="Img/1600w-7MtFJrVplss.webp" alt="Profesor de Informática">
                 <figcaption>
                     <h3>Lorenzo Gómez</h3>
-                    <p>Ingeniero Informático. Especialista en programación web.</p>
+                    <p>Licenciado en Lengua Castellana. Logopeda</p>
                 </figcaption>
             </figure>
 
@@ -116,28 +122,38 @@
                     <th>Asignatura</th>
                     <th>Nivel</th>
                     <th>Modalidad</th>
+                    <th>Horarios</th>
+                    <th>Precio</th>
                 </tr>
             </thead>
 
+
             <tbody>
                 <tr>
-                    <td><i class="fa-solid fa-calculator"></i>Matemáticas</td>
+                    <td><i class="fa-solid fa-calculator"></i> Matemáticas</td>
                     <td>Primaria / ESO / Bachillerato</td>
                     <td>Online y Presencial</td>
+                    <td>Lunes a Viernes<br>16:00 - 20:00</td>
+                    <td>15€/hora</td>
                 </tr>
 
                 <tr>
-                    <td><i class="fa-solid fa-globe"></i>Inglés</td>
+                    <td><i class="fa-solid fa-globe"></i> Inglés</td>
                     <td>Todos los niveles</td>
                     <td>Online y Presencial</td>
+                    <td>Lunes a Jueves<br>17:00 - 21:00</td>
+                    <td>18€/hora</td>
                 </tr>
 
                 <tr>
-                    <td><i class="fa-solid fa-pen"></i>Lengua</td>
+                    <td><i class="fa-solid fa-pen"></i> Lengua</td>
                     <td>Primaria y ESO</td>
                     <td>Presencial</td>
+                    <td>Martes y Jueves<br>16:00 - 19:00</td>
+                    <td>14€/hora</td>
                 </tr>
             </tbody>
+
         </table>
 
 
@@ -168,10 +184,10 @@
     </section>
 
     <section class="contacto" id="contacto">
-       
+
 
         <form class="formulario-contacto">
-             <h2>Contacto</h2>
+            <h2>Contacto</h2>
 
             <label for="nombre">Nombre</label>
             <input type="text" id="nombre" name="nombre" placeholder="Tu nombre" required>
@@ -199,10 +215,10 @@
 
         </form>
         <div class="Rss">
-                    <!-- start feedwind code -->
-                    <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" preloader-text="Loading"
-                        data-fw-param="177091/"></script>
-                </div>
+            <!-- start feedwind code -->
+            <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" preloader-text="Loading"
+                data-fw-param="177091/"></script>
+        </div>
     </section>
 
 
@@ -221,6 +237,13 @@
                 <i class="fa-brands fa-twitter"></i>
             </a>
         </div>
+        <!-- NUEVO ENLACE -->
+        <p class="ministerio">
+            Enlace oficial:
+            <a href="https://www.gobiernodecanarias.org/educacion/" target="_blank">
+                Ministerio de Educación de Canarias
+            </a>
+        </p>
     </footer>
     <script>
         const carrusel = document.querySelector(".carrusel-track");
