Se añade scroll to top por js y se mejora responsive de la tabla

--- a/Index.html
+++ b/Index.html
@@ -116,42 +116,44 @@
     </section>
     <section class="servicios" id="servicios">
         <h2>Nuestros Servicios</h2>
+        
+        <div class="contenedor-tabla">
+            <table class="tabla-servicios">
+                <thead>
+                    <tr>
+                        <th>Asignatura</th>
+                        <th>Nivel</th>
+                        <th>Modalidad</th>
+                        <th>Horarios</th>
+                        <th>Precio</th>
+                    </tr>
+                </thead>
 
-        <table class="tabla-servicios">
-            <thead>
-                <tr>
-                    <th>Asignatura</th>
-                    <th>Nivel</th>
-                    <th>Modalidad</th>
-                    <th>Horarios</th>
-                    <th>Precio</th>
-                </tr>
-            </thead>
-
-            <tbody>
-                <tr id="fila-matematicas">
-                    <td><i class="fa-solid fa-calculator"></i> Matemáticas</td>
-                    <td>Primaria / ESO / Bachillerato</td>
-                    <td>Online y Presencial</td>
-                    <td>Lunes a Viernes<br>16:00 - 20:00</td>
-                    <td>15€/hora</td>
-                </tr>
-                <tr id="fila-ingles">
-                    <td><i class="fa-solid fa-globe"></i> Inglés</td>
-                    <td>Todos los niveles</td>
-                    <td>Online y Presencial</td>
-                    <td>Lunes a Jueves<br>17:00 - 21:00</td>
-                    <td>18€/hora</td>
-                </tr>
-                <tr id="fila-lengua">
-                    <td><i class="fa-solid fa-pen"></i> Lengua</td>
-                    <td>Primaria y ESO</td>
-                    <td>Presencial</td>
-                    <td>Martes y Jueves<br>16:00 - 19:00</td>
-                    <td>14€/hora</td>
-                </tr>
-            </tbody>
-        </table>
+                <tbody>
+                    <tr id="fila-matematicas">
+                        <td><i class="fa-solid fa-calculator"></i> Matemáticas</td>
+                        <td>Primaria / ESO / Bachillerato</td>
+                        <td>Online y Presencial</td>
+                        <td>Lunes a Viernes<br>16:00 - 20:00</td>
+                        <td>15€/hora</td>
+                    </tr>
+                    <tr id="fila-ingles">
+                        <td><i class="fa-solid fa-globe"></i> Inglés</td>
+                        <td>Todos los niveles</td>
+                        <td>Online y Presencial</td>
+                        <td>Lunes a Jueves<br>17:00 - 21:00</td>
+                        <td>18€/hora</td>
+                    </tr>
+                    <tr id="fila-lengua">
+                        <td><i class="fa-solid fa-pen"></i> Lengua</td>
+                        <td>Primaria y ESO</td>
+                        <td>Presencial</td>
+                        <td>Martes y Jueves<br>16:00 - 19:00</td>
+                        <td>14€/hora</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
 
         <div class="servicios-contenido">
 
@@ -241,9 +243,9 @@
         </p>
     </footer>
     <!-- BOTÓN VOLVER ARRIBA -->
-    <a href="#" class="volver-arriba">
+    <button id="btn-up" class="volver-arriba">
         <i class="fa-solid fa-arrow-up"></i>
-    </a>
+    </button>
     <script src="Js/jscript.js"></script>
 
 </body>
