Se mejora estilos de los social icons del footer

--- a/Index.html
+++ b/Index.html
@@ -116,7 +116,7 @@
     </section>
     <section class="servicios" id="servicios">
         <h2>Nuestros Servicios</h2>
-        
+
         <div class="contenedor-tabla">
             <table class="tabla-servicios">
                 <thead>
@@ -221,7 +221,7 @@
 
     <footer class="footer">
         <p>© 2026 ClasesConHDHugo | Todos los derechos reservados</p>
-        <div>
+        <div class="social-container">
             <a href="https://facebook.com" target="_blank">
                 <i class="fa-brands fa-facebook"></i>
             </a>
